--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,16 +41,53 @@ file(GLOB INCLUDE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/source_subfolder/include/*.h
 install(FILES ${INCLUDE_FILES} DESTINATION include)
 
 if(BUILD_UTILITIES)
-  file(GLOB CSUPPORT_SRC_FILES ${SRC_DIR}/csupport/*.c)
+  # csupport lib is common to all utilities, but not intended to be used as a lib by consumers
+  file(GLOB CSUPPORT_SRC_FILES "${SRC_DIR}/csupport/*.c")
   add_library(csupport STATIC ${CSUPPORT_SRC_FILES})
   target_link_libraries(csupport PRIVATE cspice)
 
-  set(CSPICE_UTILITIES brief chrnos ckbref commnt dskbrief dskexp frmdif inspkt
-                       mkdsk mkspk msopck spacit spkdif spkmrg tobin toxfr versn)
-  foreach(CSPICE_UTILITY ${CSPICE_UTILITIES})
-    file(GLOB CSPICE_UTILITY_SRC_FILES ${SRC_DIR}/${CSPICE_UTILITY}_c/*.c)
-    add_executable(${CSPICE_UTILITY} ${CSPICE_UTILITY_SRC_FILES})
-    target_link_libraries(${CSPICE_UTILITY} PRIVATE csupport cspice)
-    install(TARGETS ${CSPICE_UTILITY} DESTINATION ${CMAKE_INSTALL_BINDIR})
+  # Walk into all utilities subfolders and build them (except cook_c which only contains examples)
+  set(CSPICE_UTILITIES_SUBDIRS brief_c chrnos_c ckbref_c commnt_c dskbrief_c dskexp_c
+                               frmdif_c inspkt_c mkdsk_c mkspk_c msopck_c spacit_c
+                               spkdif_c spkmrg_c tobin_c toxfr_c versn_c)
+  foreach(CSPICE_SUBDIR ${CSPICE_UTILITIES_SUBDIRS})
+    set(UTILITY_SRC_DIR "${SRC_DIR}/${CSPICE_SUBDIR}")
+
+    # Each .pgm file is the entry point of an executable
+    file(GLOB PGM_FILES "${UTILITY_SRC_DIR}/*.pgm")
+
+    # Remove (only required in Windows source code?):
+    # - existing main.c file
+    # - .c files with the same name than .pgm files
+    file(REMOVE "${UTILITY_SRC_DIR}/main.c")
+    foreach(PGM_FILE ${PGM_FILES})
+      get_filename_component(PGM_FILENAME ${PGM_FILE} NAME_WE)
+      file(REMOVE "${UTILITY_SRC_DIR}/${PGM_FILENAME}.c")
+    endforeach()
+
+    # Generate a local static lib from existing .c files
+    file(GLOB CSPICE_UTILITY_SRC_FILES ${UTILITY_SRC_DIR}/*.c)
+    if(CSPICE_UTILITY_SRC_FILES)
+      add_library(${CSPICE_SUBDIR}_OBJ OBJECT ${CSPICE_UTILITY_SRC_FILES})
+    endif()
+
+    # Generate one executable per pgm file
+    foreach(PGM_FILE ${PGM_FILES})
+      # Generate:
+      # - <pgm_filename>_main.c file from .pgm file
+      # - <pgm_filename>.c from main.x file:
+      get_filename_component(CSPICE_UTILITY ${PGM_FILE} NAME_WE)
+      set(PGM_MAIN_SRC_FILE "${UTILITY_SRC_DIR}/${CSPICE_UTILITY}_main.c")
+      set(GENERIC_MAIN_SRC_FILE "${UTILITY_SRC_DIR}/${CSPICE_UTILITY}.c")
+      configure_file(${PGM_FILE} ${PGM_MAIN_SRC_FILE} COPYONLY)
+      configure_file("${UTILITY_SRC_DIR}/main.x" ${GENERIC_MAIN_SRC_FILE} COPYONLY)
+
+      add_executable(${CSPICE_UTILITY} ${PGM_MAIN_SRC_FILE} ${GENERIC_MAIN_SRC_FILE})
+      target_link_libraries(${CSPICE_UTILITY} PRIVATE csupport cspice)
+      if(TARGET ${CSPICE_SUBDIR}_OBJ)
+        target_link_libraries(${CSPICE_UTILITY} PRIVATE ${CSPICE_SUBDIR}_OBJ)
+      endif()
+      install(TARGETS ${CSPICE_UTILITY} DESTINATION ${CMAKE_INSTALL_BINDIR})
+    endforeach()
   endforeach()
 endif()
