--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ elseif(UNIX)
   target_compile_definitions(cspice PRIVATE "NON_UNIX_STDIO")
   target_compile_options(cspice PRIVATE -ansi)
 endif()
+
 if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
   target_link_libraries(cspice PRIVATE m)
 endif()
@@ -86,6 +87,9 @@ if(BUILD_UTILITIES)
       target_link_libraries(${CSPICE_UTILITY} PRIVATE csupport cspice)
       if(TARGET ${CSPICE_SUBDIR}_OBJ)
         target_link_libraries(${CSPICE_UTILITY} PRIVATE ${CSPICE_SUBDIR}_OBJ)
+      endif()
+      if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
+        target_link_libraries(${CSPICE_UTILITY} PRIVATE m)
       endif()
       install(TARGETS ${CSPICE_UTILITY} DESTINATION ${CMAKE_INSTALL_BINDIR})
     endforeach()
